# gvms-python

./: .gitmodules  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: client.py
src/gvms/: client.py  exceptions.py
src/gvms/api/v1/: gvoice_pb2.py  gvoice_pb2_grpc.py
