[metadata]
name = gvms
version = 1.0.0
description = GVMS Python client
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Erik Tyryshkin
author_email = tyryshkin.erik@gmail.com
url = https://github.com/kingcobra2468/gvms-python
download_urls = https://github.com/kingcobra2468/gvms-python
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
python_requires = >=3.7.5
install_requires =
    grpcio==1.60.0
    protobuf==4.24.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
